More work on lambdas - no-arg closure-free calls working